--- a/FoodDeliveryApp.Web/Views/Restaurants/Details.cshtml
+++ b/FoodDeliveryApp.Web/Views/Restaurants/Details.cshtml
@@ -31,65 +31,10 @@
 </div>
 
 <a asp-controller="FoodItems" asp-action="CreateNewFoodItem" asp-route-restaurantId="@Model.Id" class="btn btn-success">Add New Food Item</a>
+<a asp-controller="Restaurants" asp-action="GetMenu" asp-route-id="@Model.Id" class="btn btn-success">See MENU</a>
 
-<h2 class="mt-4">Menu</h2>
 
-@if (Model.FoodItems != null && Model.FoodItems.Any())
-{
-    var counter = 0;
-    <div class="container">
 
-        @foreach (var item in Model.FoodItems.OrderByDescending(f => f.TimesOrdered))
-        {
-            if (counter % 3 == 0)
-            {
-                @:<div class="row">
-            }
-
-            <div class="col-md-4 mb-4" style="width: 19rem; height: 40rem">
-                <div class="card" style="height: 100%">
-                    @if (!string.IsNullOrEmpty(item.ImageUrl))
-                    {
-                        <img src="@item.ImageUrl" class="card-img-top" style=" height: 50%" alt="@item.Name">
-                    }
-                    <div class="card-body">
-                        <h5 class="card-title">@item.Name</h5>
-                        @if (item == Model.FoodItems.OrderByDescending(f => f.TimesOrdered).First())
-                        {
-                            <span class="badge bg-success">Most Popular</span>
-                        }
-                        <p class="card-text">@item.Description</p>
-                        <p class="card-text">Price: $@item.Price.ToString("F2")</p>
-                        <div class="card-footer">
-                            <a asp-controller="Restaurants" asp-action="AddToCart" asp-route-id="@item.Id" class="btn btn-primary">Add to Cart</a>
-                            <a asp-controller="FoodItems" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success">Edit</a>
-                            <a asp-controller="FoodItems" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
-                           
-                        </div>
-                      
-                    </div>
-                </div>
-            </div>
-
-           
-
-             @if (counter % 3 == 2)
-             {
-                @:</div>
-             }
-              
-             counter += 1;
-        }
-
-    </div>
-}
-else
-{
-    <p>No food items available for this restaurant.</p>
-}
-<div style="height: 50px">
-    <hr />
-</div>
 
 <h2 class="mt-4">Reviews</h2>
 
