--- a/FoodDeliveryApp.Web/Views/Shared/_AddToCartModal.cshtml
+++ b/FoodDeliveryApp.Web/Views/Shared/_AddToCartModal.cshtml
@@ -14,7 +14,7 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Quantity" class="control-label"></label>
-                        <input asp-for="Quantity" class="form-control" />
+                        <input asp-for="Quantity" class="form-control" min="1" max="10" placeholder="1" value="1"/>
                         <span asp-validation-for="Quantity" class="text-danger"></span>
                     </div>
                     <input type="hidden" asp-for="FoodItemId" />
