--- a/FoodDeliveryApp.Web/Views/Shared/_OrderSuccesfulModal.cshtml
+++ b/FoodDeliveryApp.Web/Views/Shared/_OrderSuccesfulModal.cshtml
@@ -11,7 +11,7 @@
                 Your order has been placed successfully!
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-check" data-dismiss="modal">View delivery Status</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">View delivery Status</button>
             </div>
         </div>
     </div>
