--- a/FoodDeliveryApp.Web/Views/Shared/_Layout.cshtml
+++ b/FoodDeliveryApp.Web/Views/Shared/_Layout.cshtml
@@ -30,14 +30,17 @@
                                 View Order Status
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="orderStatusDropdown">
-                                <!--Don't  know if we should keep the name currently delivering but i ment the current order that the user wants to track-->
-                                <li><a class="dropdown-item" asp-area="" asp-controller="ViewStatus" asp-action="Index" data-bs-toggle="modal" data-bs-target="#orderModal">Order Status </a>></li>
-                                <!--This will be a link to download a pdf of all orders-->
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Order" asp-action="History"> Previous orders</a></li>
+                                <li>
+                                    <a class="dropdown-item" asp-area="" asp-controller="ViewStatus" asp-action="Index" id="orderStatusLink">
+                                        Order Status
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Order" asp-action="History">Previous orders</a>
+                                </li>
                             </ul>
                         </li>
-                    </ul><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd">
-
+                    </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
@@ -57,6 +60,33 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <!-- Add this script to handle the modal -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#orderStatusLink').on('click', function (event) {
+                event.preventDefault();
+
+                var url = $(this).attr('href');
+
+                $.get(url, function (data) {
+                    $('#orderModal .modal-content').html(data);
+                    $('#orderModal').modal('show');
+                });
+            });
+        });
+    </script>
+
     @await RenderSectionAsync("Scripts", required: false)
+
+    <!-- Modal Placeholder -->
+    <div class="modal fade" id="orderModal" tabindex="-1" aria-labelledby="orderModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <!-- The content will be loaded here dynamically -->
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
