--- a/FoodDeliveryApp.Web/Views/ShoppingCart/SuccessfulPayment.cshtml
+++ b/FoodDeliveryApp.Web/Views/ShoppingCart/SuccessfulPayment.cshtml
@@ -2,7 +2,7 @@
 
 <h1>Succesfully payment! </h1>
 <div class="float-lg-start">
-<a asp-controller="OrderStatus" asp-action="ViewSatus"class="btn btn-success">View delivery status</a>
-<a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Return to home screen</a>
+<a asp-controller="ViewStatus" asp-action="Index" class="btn btn-success">View delivery status</a>
+<a asp-controller="Home" asp-action="Index" class="btn btn-primary">Return to home screen</a>
     </div>
 </div>
