email and order changes

--- a/FoodDeliveryApp.Web/Views/Home/Index.cshtml
+++ b/FoodDeliveryApp.Web/Views/Home/Index.cshtml
@@ -4,7 +4,9 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-<body style="background-color:#fffcf4">
+<link rel="stylesheet" href="~/css/CSS-Style/HomeScreenStyle.css" asp-append-version="true" />
+<body>
+
 
 @if (SignInManager.IsSignedIn(User))
 {
@@ -12,6 +14,16 @@
 <div class="text-center">
         <img src="~/images/LOGO.png" style="width:400px;height:400px;"/>
         <br>
+        <h1>Order delivery near you!</h1>
+    <div class="m-3">
+        <form asp-controller="Restaurants" asp-action="Index" method="get">
+            <div class="input-group">
+                <input type="text" name="searchTerm" class="form-control" placeholder="Search Restaurants..." value="@ViewData["CurrentFilter"]" />
+                <button class="btn btn-outline-secondary" type="submit">Search</button>
+            </div>
+        </form>
+    </div>
+
     <a asp-controller="Restaurants" asp-action="Index" class="btn btn-success">See Restaurants</a>
    
 </div>
@@ -20,7 +32,16 @@
 }
 else
 {
-    <h2>Please Sign In or Register to use the app</h2>
+    <h1>Order delivery near you!</h1>
+    <div class="m-3">
+        <form asp-controller="Restaurants" asp-action="Index" method="get">
+            <div class="input-group">
+                <input type="text" name="searchTerm" class="form-control" placeholder="Search Restaurants..." value="@ViewData["CurrentFilter"]" />
+                <button class="btn btn-outline-secondary" type="submit">Search</button>
+            </div>
+        </form>
+    </div>
+    <h2>Sign in to use all features!</h2>
     <a class="btn btn-info" asp-area="Identity" asp-page="/Account/Login">Login</a>
     <a class="btn btn-info" asp-area="Identity" asp-page="/Account/Register">Register</a>
 }
