--- a/FoodDeliveryApp.Web/Views/ShoppingCart/Index.cshtml
+++ b/FoodDeliveryApp.Web/Views/ShoppingCart/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.Extensions.Options
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.Extensions.Options
 @model FoodDeliveryApp.Domain.DTO.ShoppingCartDTO
 @inject IOptions<FoodDeliveryApp.Domain.StripeSettings> Stripe
 @{
@@ -137,7 +138,6 @@ else
             font-family: inherit !important;
         }
 </style>
-
 <script>
     function loadModal() {
         $.ajax({
