--- a/FoodDeliveryApp.Web/Views/Restaurants/Create.cshtml
+++ b/FoodDeliveryApp.Web/Views/Restaurants/Create.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="AverageRating" class="control-label"></label>
-                <input asp-for="AverageRating" class="form-control" />
+                <input asp-for="AverageRating" class="form-control" type="number" step="0.1" min="0" max="5"/>
                 <span asp-validation-for="AverageRating" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -45,7 +45,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="BaseDeliveryFee" class="control-label"></label>
-                <input asp-for="BaseDeliveryFee" class="form-control" />
+                <input asp-for="BaseDeliveryFee" class="form-control" type="number" step="0.01" min="0"/>
                 <span asp-validation-for="BaseDeliveryFee" class="text-danger"></span>
             </div>
             <div class="form-group">
