--- a/FoodDeliveryApp.Web/Views/Restaurants/GetMenu.cshtml
+++ b/FoodDeliveryApp.Web/Views/Restaurants/GetMenu.cshtml
@@ -29,7 +29,7 @@
                             <span class="badge bg-success">Most Popular</span>
                         }
                         <p class="card-text mt-2">@item.Description</p>
-                        <p class="card-text">Price: $@item.Price.ToString("F2")</p>
+                        <p class="card-text">Price in den. : $@item.Price.ToString()</p>
                     </div>
                     <div class="card-footer d-flex justify-content-between">
                           @if (SignInManager.IsSignedIn(User))
